<resources>

    <string name="app_name">例子</string>
    <string name="app_name_activity_lifecycle">Activity生命周期</string>
    <string name="string_tr">我是一个程序员</string>
	<string name="str_checkbox">一、注册信息和隐私保护\n二、使用规则\n三、服务内容\n四、知识产权和其他合法权益</string>
	<string name="aihao">爱好调查页面例子：</string>
	
	<string name="sub1">1.你了解Window操作系统吗？</string>
	<string name="sub2">2.你了解编程语言么？</string>
	<string name="sub3">3.你知道计算机中的基本进制是什么吗？</string>
	
	<string name="sub1_opt1">A、精通</string>
	<string name="sub1_opt2">A、一般</string>
	<string name="sub1_opt3">A、不了解</string>
	
	<string name="sub2_opt1">A、精通各种语言</string>
	<string name="sub2_opt2">A、了解C语言</string>
	<string name="sub2_opt3">A、只会说汉语</string>
	
	<string name="sub3_opt1">A、二进制</string>
	<string name="sub3_opt2">A、十进制</string>
	<string name="sub3_opt3">A、十六进制</string>
	
	
	
	<string name="tv_content">人之初  性本善  性相近  习相远  苟不教  性乃迁

教之道  贵以专  昔孟母  择邻处  子不学  断机杼

窦燕山  有义方  教五子  名俱扬  养不教  父之过

教不严  师之惰  子不学  非所宜  幼不学  老何为

玉不琢  不成器  人不学  不知义  为人子  方少时

亲师友  习礼仪  香九龄  能温席  孝于亲  所当执

融四岁  能让梨  弟于长  宜先知  首孝弟  次见闻

知某数  识某文  一而十  十而百  百而千  千而万

三才者  天地人  三光者  日月星  三纲者  君臣义

父子亲  夫妇顺  曰春夏  曰秋冬  此四时  运不穷

曰南北  曰西东  此四方  应乎中  曰水火  木金土

此五行  本乎数  曰仁义  礼智信  此五常  不容紊

稻粱菽  麦黍稷  此六谷  人所食  马牛羊  鸡犬豕

此六畜  人所饲  曰喜怒  曰哀惧  爱恶欲  七情具

匏土革  木石金  丝与竹  乃八音  高曾祖  父而身

身而子  子而孙  自子孙  至玄曾  乃九族  人之伦

父子恩  夫妇从  兄则友  弟则恭  长幼序  友与朋

君则敬  臣则忠  此十义  人所同  凡训蒙  须讲究

详训诂  名句读  为学者  必有初  小学终  至四书

论语者  二十篇  群弟子  记善言  孟子者  七篇止

讲道德  说仁义  作中庸  乃孔伋  中不偏  庸不易

作大学  乃曾子  自修齐  至平治  孝经通  四书熟

如六经  始可读  诗书易  礼春秋  号六经  当讲求

有连山  有归藏  有周易  三易详  有典谟  有训诰

有誓命  书之奥  我周公  作周礼  著六官  存治体

大小戴  注礼记  述圣言  礼乐备  曰国风  曰雅颂

号四诗  当讽咏  诗既亡  春秋作  寓褒贬  别善恶

三传者  有公羊  有左氏  有谷梁  经既明  方读子

撮其要  记其事  五子者  有荀杨  文中子  及老庄

经子通  读诸史  考世系  知终始  自羲农  至黄帝

号三皇  居上世  唐有虞  号二帝  相揖逊  称盛世

夏有禹  商有汤  周文武  称三王  夏传子  家天下

四百载  迁夏社  汤伐夏  国号商  六百载  至纣亡

周武王  始诛纣  八百载  最长久  周辙东  王纲堕

逞干戈  尚游说  始春秋  终战国  五霸强  七雄出

嬴秦氏  始兼并  传二世  楚汉争  高祖兴  汉业建

至孝平  王莽篡  光武兴  为东汉  四百年  终于献

魏蜀吴  争汉鼎  号三国  迄两晋  宋齐继  梁陈承

为南朝  都金陵  北元魏  分东西  宇文周  与高齐

迨至隋  一土宇  不再传  失统绪  唐高祖  起义师

除隋乱  创国基  二十传  三百载  梁灭之  国乃改

梁唐晋  及汉周  称五代  皆有由  炎宋兴  受周禅

十八传  南北混  辽与金  皆称帝  元灭金  绝宋世

舆图广  超前代  九十年  国祚废  太祖兴  国大明

号洪武  都金陵  迨成祖  迁燕京  十六世  至崇祯

权阉肆  寇如林  李闯出  神器焚  清世祖  应景命

靖四方  克大定  古今史  全在兹  载治乱  知兴衰

读史书  考实录  通古今  若亲目  口而诵  心而惟

朝于斯  夕于斯  昔仲尼  师项橐  古圣贤  尚勤学

赵中令  读鲁论  彼既仕  学且勤  披蒲编  削竹简

彼无书  且知勉  头悬梁  锥刺股  彼不教  自勤苦

如囊萤  如映雪  家虽贫  学不辍  如负薪  如挂角

身虽劳  犹苦卓  苏老泉  二十七  始发愤  读书籍

彼既老  犹悔迟  尔小生  宜早思  若梁灏  八十二

对大廷  魁多士  彼既成  众称异  尔小生  宜立志

莹八岁  能咏诗  泌七岁  能赋棋  彼颖悟  人称奇

尔幼学  当效之  蔡文姬  能辨琴  谢道韫  能咏吟

彼女子  且聪敏  尔男子  当自警  唐刘晏  方七岁

举神童  作正字  彼虽幼  身已仕  尔幼学  勉而致

有为者  亦若是  犬守夜  鸡司晨  苟不学  曷为人

蚕吐丝  蜂酿蜜  人不学  不如物  幼而学  壮而行

上致君  下泽民  扬名声  显父母  光于前  裕于后

人遗子  金满嬴  我教子  惟一经  勤有功  戏无益

戒之哉  宜勉力 
	    
	</string>
	
	<string-array name="System">
	    <item>Windows</item>
	    <item >Linux</item>
	    <item >Unix</item>
	    <item >Google</item>
	    <item >Other</item>
	</string-array>
	
	<string-array name="seat">
	    <item>A1满</item>
	    <item>A2满</item>
	    <item>A3满</item>
	    <item>B1空</item>
	    <item>B2空</item>
	    <item>B3满</item>
	    <item>C1空</item>
	    <item>C2满</item>
	    <item>C3空</item>
	</string-array>
	
	<string-array name="names">
	    <item>张三</item>
	    <item>李四</item>
	    <item>王五</item>
	    <item>赵六</item>
	    <item>田七</item>
	</string-array>
	
	<string name="send">发送邮件</string>
	<string name="look">阅读邮件</string>
	<string name="delete">删除邮件</string>
</resources>
