<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    >

    <RadioGroup
        android:id="@+id/radiogroup_face"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="党员" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="群众" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="团员" />
    </RadioGroup>
    
    
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub1"/>
    
    <RadioGroup
        android:id="@+id/sub1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/sub1_opt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub1_opt1" />

        <RadioButton
            android:id="@+id/sub1_opt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub1_opt2" />

        <RadioButton
            android:id="@+id/sub1_opt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub1_opt3" />
    </RadioGroup>
    
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub1"/>
    
    <RadioGroup
        android:id="@+id/sub2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/sub2_opt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub2_opt1" />

        <RadioButton
            android:id="@+id/sub2_opt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub2_opt2" />

        <RadioButton
            android:id="@+id/sub2_opt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub2_opt3" />
    </RadioGroup>
    
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub1"/>
    
    <RadioGroup
        android:id="@+id/sub3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/sub3_opt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub3_opt1" />

        <RadioButton
            android:id="@+id/sub3_opt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub3_opt2" />

        <RadioButton
            android:id="@+id/sub3_opt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sub3_opt3" />
    </RadioGroup>
    
    <TextView 
        android:id="@+id/textview_sub_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>